--- a/src/index.css
+++ b/src/index.css
@@ -68,7 +68,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #19191900;
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -190,23 +190,6 @@ body {
   animation-delay: 0.5s;
 }
 
-.logo {
-  font-family: 'Montserrat', sans-serif;
-  font-size: 2rem;
-  font-weight: 700;
-  letter-spacing: 1px;
-  display: flex;
-  align-items: center;
-}
-
-.logo-light {
-  color: #f0f0f0;
-}
-
-.logo-orange {
-  color: #ff914d;
-}
-
 .main-heading {
   font-family: 'Montserrat', sans-serif;
   font-size: 3rem;
@@ -231,31 +214,8 @@ body {
   color: #9b9999;
 }
 
-.logo,
 .main-heading {
   font-family: 'Audiowide', cursive;
-}
-
-.nav-links button {
-  background: none;
-  border: none;
-  font-size: 1rem;
-  font-weight: 500;
-  cursor: pointer;
-  padding-bottom: 0.25rem;
-  border-bottom: 3px solid transparent;
-  transition: color 0.3s ease, border-color 0.3s ease;
-}
-
-body.light-mode .nav-links button:hover,
-body.dark-mode .nav-links button:hover {
-  border-bottom-color: #ff914d;
-}
-
-.nav-links button.active {
-  border-bottom-color: #ff914d;
-  font-weight: 600;
-  color: #ff914d;
 }
 
 .homepage h2 {
@@ -298,42 +258,6 @@ body.dark-mode .nav-links button:hover {
 }
 
 /* Add these at the end of your file */
-
-body.dark-mode .logo-light {
-  color: #f0f0f0;
-}
-
-body.light-mode .navbar {
-  background-color: #ffffff;
-  border-bottom: 2px solid #ff914d;
-}
-
-body.dark-mode .navbar {
-  background-color: #242423;
-}
-
-body.dark-mode .nav-links button {
-  color: #f0f0f0 !important;
-}
-
-body.light-mode .logo-light {
-  color: #213547;
-}
-
-body.light-mode .nav-links li button{
-  color: #213547 !important;
-}
-
-body.light-mode .nav-links button {
-  color: #213547 !important;
-}
-
-body.light-mode .nav-links button.active,
-body.dark-mode .nav-links button.active {
-  color: #ff914d !important;
-  border-bottom-color: #ff914d;
-  font-weight: 600;
-}
 
 body.light-mode .features li,
 body.light-mode .why-gainova li {
@@ -529,15 +453,6 @@ body.light-mode .feature-card p {
   .social-links {
     justify-content: flex-start;
   }
-}
-body.light-mode {
-  background-color: #ffffff;
-  color: #213547;
-}
-
-body.dark-mode {
-  background-color: #242423;
-  color: #f0f0f0;
 }
 
 /* Website background color */
